# ros2_rt_eval

./: .gitattributes  .gitignore  README.md
results/rt_results_multi_5_cli/i5/: 1client.csv  2client.csv  3client.csv  4client.csv  5client.csv
results/rt_results_vec_series/: 100000client.csv  10000client.csv  1000client.csv  100client.csv  10client.csv  1client.csv
results_test/: node1cli1client.csv  node1cli2client.csv  node1cli3client.csv  node1cli4client.csv  node1cli5client.csv
results_test/multi_cli/: node1cli1client.csv  node1cli4client.csv  node1cli5client.csv
results_test/multi_cli_srv/: node1cli1client.csv  node1cli5client.csv  node2cli1client.csv  node2cli5client.csv  node3cli3client.csv  node3cli4client.csv  node4cli2client.csv  node4cli3client.csv  node4cli4client.csv  node5cli1client.csv  node5cli3client.csv  node5cli4client.csv  node5cli5client.csv
results_test/multi_srv/: node1cli1client.csv  node2cli2client.csv  node3cli3client.csv  node4cli4client.csv  node5cli5client.csv
ros2_rt_eval/: CMakeLists.txt  package.xml
ros2_rt_eval/.results/: 1client.csv  1output.csv  1server.csv
ros2_rt_eval/.results_1_1_1/: 1client.csv  1output.csv  1server.csv
ros2_rt_eval/.script/: plot_latency.py  stress_test.sh
ros2_rt_eval/.script/results/: latencies_vector_10.csv  latencies_vector_100.csv  latencies_vector_1000.csv  latencies_vector_200.csv  latencies_vector_50.csv  latencies_vector_500.csv
ros2_rt_eval/.scripts1/: merge_1.py  test.sh
ros2_rt_eval/.src/: rt_cli_node.cpp  rt_cli_node2.cpp  rt_cli_nodepy.py  rt_eval_node.cpp
ros2_rt_eval/.src1/: rt_cli_node.cpp  rt_srv_node.cpp
ros2_rt_eval/.src2/: rt_cli_node.cpp  rt_srv_node.cpp
ros2_rt_eval/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_rt_eval/install/ros2_rt_eval/share/ros2_rt_eval/: package.bash  package.zsh
ros2_rt_eval/launch/: multi_cli.py  multi_cli_srv.py  multi_srv.py
ros2_rt_eval/log/: latest_build
ros2_rt_eval/results/: 10client.csv  1client.csv
ros2_rt_eval/scripts/: multi_srv.sh  vec_size.sh
ros2_rt_eval/scripts/.scripts/: multi_cli.sh  multi_cli_srv.sh
ros2_rt_eval/src/: rt_cli_node.cpp  rt_srv_node.cpp
ros2_rt_eval_dep/: CMakeLists.txt  package.xml
ros2_rt_eval_dep/srv/: CallClientSrv.srv  Vector.srv
