<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_rt_eval</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="enzoholzmanngaio@gmail.com">ehg2004</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <!-- <exec_depend>rosidl_default_runtime</exec_depend>
    <build_depend>rosidl_default_generators</build_depend> -->
  <exec_depend>example_interfaces</exec_depend>
  <member_of_group>example_interfaces</member_of_group>
  <exec_depend>ros2_rt_eval_dep</exec_depend>
  <member_of_group>ros2_rt_eval_dep</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
